Move example YAML to example/

--- a/example/example.yaml
+++ b/example/example.yaml
@@ -6,3 +6,8 @@ transifex:
     languages: fi
   - project: django
     languages: fi
+local:
+  - file: foo.json
+    language: fi
+  - file: foo.yaml
+    language: fi
